<resources>
    <string name="app_name">WYA..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_location_prompt">Request Location</string>
    <string name="action_settings">Settings</string>
    <string name="name_placeholder">Name</string>
    <string name="from_static">From: </string>
    <string name="view_location">View Location</string>
    <string name="ignore">Ignore</string>
    <string name="send_location">Send</string>
    <string name="title_activity_location_detail">LocationDetail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save">Save</string>
    <string name="permission_dialog_title">Access Contacts</string>
    <string name="permission_dialog_title_location">Access Location</string>
    <string name="permission_dialog_message">The contacts are needed for this app, please let us use your contacts.</string>
    <string name="permission_dialog_message_location">The location is needed for this app, please let us use your location.</string>
    <string name="next">Next</string>
    <string name="empty_contacts">No Contacts</string>
    <string name="cannot_access_contacts_title">Cannot Access Contacts</string>
    <string name="cannot_access_location_title">Cannot Access Location</string>
    <string name="cannot_access_contacts_message">The contacts are needed for this app, app will close.</string>
    <string name="cannot_access_location_message">The location is needed for this app, app will close.</string>
    <string name="okay">Okay</string>
    <string name="update">Update</string>
    <string name="enter_username">Enter username: </string>
    <string name="enter_longitude">Enter a Longitude: </string>
    <string name="latitude_is">Latitude: </string>
    <string name="longitude_is">Longitude: </string>
    <string name="enter_contact_name">Enter a Contact Name: </string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="sent_requests_file">sent_requests.txt</string>
    <string name="received_requests_file">received_requests.txt</string>
    <string name="title_activity_location_maps">Map</string>
    <string name="test_server">Test Server</string>
    <string name="sign_out">Sign Out</string>
    <string name="cannot_sign_in_title">Could Not Sign In</string>
    <string name="cannot_sign_in_message">Sorry! You could not be signed in.</string>
    <string name="sign_out_successful_title">Successfully Signed Out</string>
    <string name="sign_out_successful_message">You have been signed out!</string>
    <string name="cannot_sign_out_title">Cannot Sign Out</string>
    <string name="cannot_sign_out_message">Could not sign out, you are not even signed in.</string>
    <string name="received_loc_req_title">Received Request From </string>
    <string name="received_loc_req_message">Would you like to send location to </string>
    <string name="notification_positive">Accept</string>
    <string name="notification_negative">Decline</string>
    <string name="denied_loc_res_title">Denied Your Location Request</string>
    <string name="denied_loc_res_message">Sorry we cannot make your friends not suck :(</string>
    <string name="accepted_loc_res_title">Sent You Their Location!</string>
    <string name="accepted_loc_res_message">Click here to view!</string>
</resources>
